Fixed actions config

--- a/.github/workflows/build-catalogue.yml
+++ b/.github/workflows/build-catalogue.yml
@@ -22,9 +22,8 @@ jobs:
           distribution: "temurin"
           cache: maven
       - name: Format check
-        working-directory: catalogue
         run: |
-
+          cd catalogue
           mvn formatter:validate
       - name: Test with Maven
         run: |
