--- a/.github/workflows/build-catalogue.yml
+++ b/.github/workflows/build-catalogue.yml
@@ -23,9 +23,9 @@ jobs:
           cache: maven
       - name: Format check
         run: |
-          cd catalogue
+          cd service/catalogue
           mvn formatter:validate
       - name: Test with Maven
         run: |
-          cd catalogue
+          cd service/catalogue
           mvn test
